Fixed action wrapping

--- a/web/modules/custom/afrikaburn_bio/css/afrikaburn-bio.css
+++ b/web/modules/custom/afrikaburn_bio/css/afrikaburn-bio.css
@@ -107,6 +107,7 @@ article.user img{
 
 .account-actions{
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-end;
 }
 
